--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,22 +1,19 @@
 # main links links
 main:
-  - title: "Publications"
-    url: /publications/
+  - title: "Estatística"
+    url: /stats/
 
-  - title: "Talks"
-    url: /talks/    
+  - title: "Python"
+    url: /python/    
 
-  - title: "Teaching"
-    url: /teaching/    
+  - title: "Opinião"
+    url: /opinion/    
     
   - title: "Portfolio"
     url: /portfolio/
         
-  - title: "Blog Posts"
-    url: /year-archive/
-    
   - title: "CV"
     url: /cv/
     
-  - title: "Guide"
-    url: /markdown/
+  #- title: "Guide"
+  #  url: /markdown/
